Update and rename XML.md to 2019-05-16-XML.md

--- a/_posts/2019-05-16-XML.md
+++ b/_posts/2019-05-16-XML.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Explaining the XML Assignment
+title: Progress with the XML Assignment
 ---
 
 ### 1/A. Creating the cleaned copies of the Perseus XML files
@@ -37,5 +37,28 @@ created for this assignment.
 
 
 ### 1/B. Splitting issues into articles
-</Pubplace> <date value=".*?" authname
-</div3>
+I figured out that the publication date is included in each issue after the tag <date value>, between the tags </pubPlace> and the following "authname". Therefore I used the re.search function with the apprpriate RegEx in the following way:  
+```python
+    with open(folder_path+file, "r", encoding="utf8") as f2:
+        data2 = f2.read()
+        issue_dates = re.search(r"</pubPlace> <date value=\"(.*)\" authname", data2).group(1)
+        print(issue_dates)
+```  
+Regarding the splitting of the issues into articles, the tag <div3> signals the start of a new article. I managed to split one issue into
+constituent articles with the re.split method, splitting the issue at </div3>:  
+```python
+    with open(folder_path+"dltext@doc=Perseus%3Atext%3A2006.05.0001", "r", encoding="utf8") as text_split1:
+    data_split1 = text_split1.read()
+    results_split1 = re.split("</div3>", data_split1)
+```  
+According to my logic, to split all the issues into articles would have required to pass the same command on the entire `lof` list, defined for the first assignment. However, for reasons I could not figure out, this method only split one article at a time, instead of the entire list.  
+Regarding the counter, I would have used the logic learned at Codecademy:  
+```python
+    def counter(issues):
+        total = 0
+        for issue in issues:
+            total += 1
+        return total
+```
+
+    
