--- a/_posts/2020-04-13-sinac.md
+++ b/_posts/2020-04-13-sinac.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: Introducing Sinac
+---
+
 # Introducing Sinac  
 Sinac is an artificial language I created during my primary school and high school years. I used for writing diaries, 'decorating' my textbooks, and even taught it to some classmates for a while. It has its own grammar rules, which were inspired mostly by my native language Hungarian, and by German, which was my first foreign language, with some additional English influences. The words were mostly made up by me randomly, at times based on the distortion of words from natural languages. Sinac evolved just like a natural language during the ca. 8-9 years I actively used it, its phonology and to some extent its grammar rules undergoing gradual changes. Here I will mostly present its latest stage ("Late Sinac").  
 
